stop body being green on mobile sidebar

--- a/templates/css/partials/_base.scss
+++ b/templates/css/partials/_base.scss
@@ -16,6 +16,10 @@ body {
     font-size: $main-font-size;
     line-height: $main-line-height;
     min-height: 100%;
+    
+    &.active {
+        background: $body-background;
+    }
 }
 
 a {
